syntax = "proto3";

package time;
option go_package = "arista/resources/protobuf/time";

import "google/protobuf/timestamp.proto";

message TimeRange {
    google.protobuf.Timestamp start_time = 1;
    google.protobuf.Timestamp end_time = 2;
}

message RequestAtTime {
    oneof at_time {
        TimeRange range = 1;
        google.protobuf.Timestamp time = 2;
    }
}
